# rs-embed

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  lint.yml  tests.yml
0.1.2/api/: index.html
0.1.2/api_export/: index.html
0.1.2/concepts/: index.html
0.1.2/contributing/: index.html
0.1.2/extending/: index.html
0.1.2/models/: index.html
0.1.2/models/agrifm/: index.html
0.1.2/models/copernicus/: index.html
0.1.2/models/galileo/: index.html
0.1.2/models/gse/: index.html
0.1.2/models/prithvi/: index.html
0.1.2/models/remoteclip/: index.html
0.1.2/models/satmae/: index.html
0.1.2/models/satmaepp/: index.html
0.1.2/models/terrafm/: index.html
0.1.2/models/terramind/: index.html
0.1.2/models_reference/: index.html
0.1.2/quickstart/: index.html
0.1.2/releases/: index.html
0.1.2/search/: search_index.json
0.1.2/workflows/: index.html
0.1.3/: 404.html  index.html
0.1.3/api_inspect/: index.html
0.1.3/architecture/: index.html
0.1.3/contributing/: index.html
0.1.3/model_detail_template/: index.html
0.1.3/models/: index.html
0.1.3/models/anysat/: index.html
0.1.3/models/dofa/: index.html
0.1.3/models/fomo/: index.html
0.1.3/models/gse/: index.html
0.1.3/models/prithvi/: index.html
0.1.3/models/remoteclip/: index.html
0.1.3/models/scalemae/: index.html
0.1.3/models/tessera/: index.html
0.1.3/models/thor/: index.html
0.1.3/models_reference/: index.html
0.1.3/quickstart/: index.html
0.1.3/releases/: index.html
0.1.3/stylesheets/: extra.css
0.2.0/: index.html
0.2.0/api/: index.html
0.2.0/choosing_settings/: index.html
0.2.0/extending/: index.html
0.2.0/models/: index.html
0.2.0/models/agrifm/: index.html
0.2.0/models/copernicus/: index.html
0.2.0/models/olmoearth/: index.html
0.2.0/models/prithvi/: index.html
0.2.0/models/satmae/: index.html
0.2.0/models_reference/: index.html
0.2.0/releases/: index.html
0.2.0/search/: search_index.json
0.2.0/stylesheets/: extra.css
0.2.0/workflows/: index.html
api/: index.html
api_embedding/: index.html
api_export/: index.html
api_inspect/: index.html
api_specs/: index.html
concepts/: index.html
dev/: 404.html  index.html
dev/api/: index.html
dev/api_embedding/: index.html
dev/api_export/: index.html
dev/api_inspect/: index.html
dev/api_load/: index.html
dev/api_specs/: index.html
dev/architecture/: index.html
dev/choosing_settings/: index.html
dev/concepts/: index.html
dev/contributing/: index.html
dev/extending/: index.html
dev/limitations/: index.html
dev/model_detail_template/: index.html
dev/models/: index.html
dev/models_reference/: index.html
dev/quickstart/: index.html
dev/releases/: index.html
dev/search/: search_index.json
dev/spatial_roi/: index.html
dev/temporal_sampling/: index.html
dev/workflows/: index.html
docs/: api.md  api_embedding.md  api_export.md  api_inspect.md  api_specs.md  architecture.md  choosing_settings.md  concepts.md  extending.md  index.md  model_detail_template.md  models.md  models_reference.md  quickstart.md  spatial_roi.md  temporal_sampling.md  workflows.md
docs/models/: agrifm.md  anysat.md  clay.md  copernicus.md  dofa.md  fomo.md  galileo.md  gse.md  olmoearth.md  prithvi.md  remoteclip.md  satmae.md  satmaepp.md  satvision.md  scalemae.md  terrafm.md  terrafm_b.md  terramind.md  tessera.md  thor.md  wildsat.md
examples/: build_demo_cache.py  demo.ipynb  iguide_demo.html  iguide_demo.ipynb  iguide_demo_helpers.py  iguide_demo_maize.ipynb  playground.ipynb  plot_utils.py  quickstart.py  utils_demo.py
examples/webapp/: index.html  prototype.html  server.py
extending/: index.html
limitations/: index.html
model_detail_template/: index.html
models/: index.html
models/agrifm/: index.html
models/anysat/: index.html
models/copernicus/: index.html
models/copernicus_embed/: index.html
models/dofa/: index.html
models/dynamicvis/: index.html
models/fomo/: index.html
models/galileo/: index.html
models/gse/: index.html
models/gse_annual/: index.html
models/prithvi/: index.html
models/prithvi_eo_v2_s2_6b/: index.html
models/remoteclip/: index.html
models/remoteclip_s2rgb/: index.html
models/satmae/: index.html
models/satmae_rgb/: index.html
models/satmaepp/: index.html
models/satvision/: index.html
models/satvision_toa/: index.html
models/scalemae/: index.html
models/scalemae_rgb/: index.html
models/terrafm/: index.html
models/terrafm_b/: index.html
models/terramind/: index.html
models/tessera/: index.html
models/thor/: index.html
models/thor_1_0_base/: index.html
models/wildsat/: index.html
models_reference/: index.html
quickstart/: index.html
search/: search_index.json
src/rs_embed/: __init__.py  __main__.py  api.py  cli.py  export.py  inspect.py  load.py  model.py  writers.py
stylesheets/: extra.css
tests/: conftest.py  test_agrifm_ckpt_autodownload.py  test_anysat_output_modes.py  test_api.py  test_api_helpers.py  test_backend_resolution.py  test_batch_overrides_all_models.py  test_capabilities_contract.py  test_checkpoint_manager.py  test_checkpoint_utils.py  test_clay_embedder.py  test_cli_parsers.py  test_combined_flow.py  test_conventions_contract.py  test_device_resolution.py  test_embedder_base_contracts.py  test_embedding.py  test_export_batch.py  test_export_batch_terrafm_s1_fetch.py  test_export_helpers.py  test_export_input_prep_consistency.py  test_export_roi_crop.py  test_export_wrapper.py  test_fetch_stats.py  test_galileo_temporal.py  test_gee_orientation_live.py  test_gee_provider.py  test_inference_helpers.py  test_input_checks.py  test_input_prep_tiling.py  test_inspect.py  test_load_export.py  test_manifest_helpers.py  test_meta_utils.py  test_model.py  test_model_aware_input_prep.py  test_olmoearth.py  test_onthefly_batch_paths.py  test_precomputed_copernicus_embed.py  test_precomputed_tessera.py  (+21 more)
workflows/: index.html
(+108 files in other folders)
