[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rs-embed"
dynamic = ["version"]
description = "Unified ROI->embedding interface for remote sensing foundation models (precomputed + on-the-fly)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "Dingqi Ye" },
]
keywords = [
  "remote sensing",
  "earth observation",
  "embeddings",
  "foundation models",
  "geospatial",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.2",
  "xarray>=2025.12.0",
  "pyproj>=3.6",
  "shapely>=2.0",
  "affine>=2.4",
]

[project.optional-dependencies]
gee = ["earthengine-api>=1.7.10"]
gee-auth = ["earthengine-api>=1.7.10", "geemap>=0.36.6"]
torch = ["torch>=2.10.0"]
models = [
  "torch>=2.10.0",
  "rshf>=0.1.12",
  "huggingface-hub>=1.3.2",
  "einops>=0.7",
  "timm>=1.0.25",
  "torchvision>=0.25.0",
  "Pillow>=10",
  "pandas>=2.3",
  "terratorch>=1.2.1",
]
netcdf = ["scipy>=1.17.0"]
viz = ["matplotlib>=3.10"]
full = [
  "earthengine-api>=1.7.10",
  "geemap>=0.36.6",
  "torch>=2.10.0",
  "rshf>=0.1.12",
  "huggingface-hub>=1.3.2",
  "einops>=0.7",
  "timm>=1.0.25",
  "torchvision>=0.25.0",
  "Pillow>=10",
  "pandas>=2.3",
  "terratorch>=1.2.1",
  "scipy>=1.17.0",
  "matplotlib>=3.10",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.5.0"]

[project.scripts]
rs-embed = "rs_embed.cli:main"

[project.urls]
Homepage = "https://github.com/cybergis/rs-embed"
Documentation = "https://cybergis.github.io/rs-embed/"
Repository = "https://github.com/cybergis/rs-embed"
Issues = "https://github.com/cybergis/rs-embed/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rs_embed"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/rs_embed",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.hatch.version]
path = "src/rs_embed/_version.py"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/rs_embed/embedders/_vendor"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "UP",   # pyupgrade (modernize type hints, etc.)
    # "B",    # flake8-bugbear — TODO: enable once existing patterns are addressed
    # "BLE",  # blind/broad exceptions — TODO: enable once Exception handlers are narrowed
    "I",    # isort
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"src/rs_embed/__init__.py" = ["F401"]  # public re-exports
"src/rs_embed/api.py" = ["F401"]       # public re-exports
