[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rs-embed"
dynamic = ["version"]
description = "Unified ROI->embedding interface for remote sensing foundation models."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
  { name = "Dingqi Ye" },
]
keywords = [
  "remote sensing",
  "earth observation",
  "embeddings",
  "foundation models",
  "geospatial",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.2",
  "pyproj>=3.6",
  "affine>=2.4",
  "geotessera",
  "earthengine-api>=1.7.10",
  "geemap>=0.36.6",
  # Match the tested environment's lower bound instead of forcing needless upgrades.
  "torch>=2.2",
  "torchvision>=0.17",
  # Keep timm in the tested range used by the vendored THOR runtime.
  "timm>=1.0.3,<=1.0.15",
  "rshf>=0.1.12",
  "huggingface-hub>=1.3.2",
  "einops>=0.7",
  "Pillow>=10",
  "pandas>=2.3",
  "xarray>=2024.06.0",
  
  # Keep direct dependency explicit because multiple embedders import terratorch directly.
  "terratorch==1.2.1", 

]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.10",
]
copernicus = [
  "tifffile>=2024.0.0",
]
full = [
  "matplotlib>=3.10",
  "tifffile>=2024.0.0",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "pre-commit>=3.0",
]

[project.scripts]
rs-embed = "rs_embed.cli:main"

[project.urls]
Homepage = "https://github.com/cybergis/rs-embed"
Documentation = "https://cybergis.github.io/rs-embed/"
Repository = "https://github.com/cybergis/rs-embed"
Issues = "https://github.com/cybergis/rs-embed/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rs_embed"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/rs_embed",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.hatch.version]
path = "src/rs_embed/_version.py"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/rs_embed/embedders/_vendor"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "UP",   # pyupgrade (modernize type hints, etc.)
    # "B",    # flake8-bugbear — TODO: enable once existing patterns are addressed
    # "BLE",  # blind/broad exceptions — TODO: enable once Exception handlers are narrowed
    "I",    # isort
]
ignore = [
    "E501",   # line too long
    "F811",   # redefinition of unused name (dataclass field vs staticmethod)
    "F841",   # local variable assigned but never used
    "E741",   # ambiguous variable name
    "UP038",  # isinstance(x, (A, B)) → isinstance(x, A | B) — unsafe with metaclasses
    "UP047",  # generic functions should use type parameters (Python 3.12 syntax)
]

[tool.ruff.lint.per-file-ignores]
"src/rs_embed/__init__.py" = ["F401"]  # public re-exports
"src/rs_embed/api.py" = ["F401"]       # public re-exports
